# dapps-vara-go

./: Cargo.toml  README.md  rustfmt.toml
alpha/: Cargo.toml  build.rs
alpha/io/: Cargo.toml
alpha/io/src/: lib.rs
alpha/src/: lib.rs
alpha/state/: Cargo.toml
alpha/state/src/: lib.rs
alpha/tests/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/state/: Cargo.toml
domain/state/src/: lib.rs
frontend/: config-overrides.js  package.json  tsconfig.path.json
frontend/public/: index.html
frontend/src/: App.module.scss  App.tsx  consts.ts  hooks.ts  index.css  react-app-env.d.ts
frontend/src/assets/meta/: alpha_state.meta.wasm
frontend/src/components/Footer/: Footer.module.scss  Footer.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/SearchInput/: SearchInput.module.scss  SearchInput.tsx
frontend/src/features/main/: atoms.ts
frontend/src/features/main/components/Main/: Main.module.scss  Main.tsx
frontend/src/features/search/components/SearchResults/: SearchResults.module.scss  SearchResults.tsx
frontend/src/features/search/components/SearchedMurkup/: SearchedMurkup.tsx  index.tsx  mockedHtml.ts  mockedStyles.ts
frontend/src/features/wallet-new/components/account-button/: account-button.module.css
frontend/src/features/wallet-new/components/wallet/: wallet.tsx
frontend/src/hocs/: index.tsx
io/: Cargo.toml
io/src/: handler.rs  lib.rs  router.rs  source.rs
src/: lib.rs
state/src/: lib.rs
tests/: tests.rs
